--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ twitter_username:
 github_username:
 
 # Build settings
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
