--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Parsons UI Example
+title: PMs. Hackman's If/else if/else Notes & Problems
 email: support@codio.com
 description: # >- # this means to ignore newlines until "baseurl:"
-  Drag or shuffle the blocks of code in the practice problems below.
-  Remember to indent where appropriate by dragging blocks to the right. <br/>
-
-  To check your work, press the "Get Feedback" button.
-  To start over, press the "Reset Problem" button.
+  Read the notes. Embeded in the notes are examples to try. <br/>  After you've completed this, return to google classroom to do this week's assignment.
 baseurl: "/ParsonsProblems" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
