--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: PMs. Hackman's If/else if/else Notes & Problems
+title: Ms. Hackman's If/else if/else Notes & Problems
 email: support@codio.com
 description: # >- # this means to ignore newlines until "baseurl:"
   Read the notes. Embeded in the notes are examples to try. <br/>  After you've completed this, return to google classroom to do this week's assignment.
